--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,7 +34,7 @@ p {font-family:'Lato', sans-serif;font-size: 1.25rem; padding-bottom: 1rem; font
 /* bottom & footer section font */
 h1.headline {font-family: 'Italianno', 'cursive', serif; text-align: center; font-style: italic;}
 footer {font-size: 0.75rem;}
-/* banner section button */
+/* banner section button & links */
 button {
   width: 400px;
   border: #777777 solid 1px;
@@ -49,7 +49,7 @@ button {
   margin: 1rem;
 }
 button a {text-decoration: none; color: white;transition: all 250ms linear 0ms;}
-button:hover a{color:#e5e5e5;}
+button:hover a{text-decoration: none; color:#b2b2b2;}
 button:active a{color:white;}
 
 a:hover {
