--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -109,6 +109,7 @@ header {
   width: 100%;
   height: auto;
   display: flex;
+  justify-content: center;
   padding: 3rem 0rem;
 }
 .gray-one, .gray-two {
@@ -129,7 +130,7 @@ header {
 
 /*1st gray/banner section */
 .content {
-  width: 40%;
+  max-width: 40%;
   margin-right: 1.5rem;
 }
 .content.banner{
@@ -140,13 +141,17 @@ header {
 }
 
 .column {
-  width: 60%;
+  max-width: 60%;
   margin:0rem 3rem 0 1.5rem;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  background-color: yellow;
 }
+.description {
+  max-width: 100%;
 
+}
 .pic-container{
   max-width: 100%;
   display: flex;
