--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,14 +1,10 @@
+
 body, html {
   font-size: 16px ;
   font-family: 'Open Sans', sans-serif; ;
   color: #777777;
 }
-.main-container {
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-}
+
 /* fonts, Buttons, Videos & Links etc. */
 @font-face {
   font-family: 'Open Sans', sans-serif;
@@ -42,11 +38,11 @@ p {font-family:'Lato', sans-serif;font-size: 1.25rem; padding-bottom: 1rem; font
 .description p {color: #888}
 .description span {display: block; font-family: 'Italianno', cursive; font-size: .875rem; font-weight: 100; margin-top: 0.75rem; color:#999}
 /* bottom & footer section font */
-h1.headline {font-family: 'Italianno', 'cursive', serif; text-align: center; font-style: italic;}
+h1.headline {margin: 0rem 0rem 3rem 0rem; font-family: 'Italianno', 'cursive', serif; text-align: center; font-style: italic;}
 footer {font-size: 0.75rem;}
 /* banner section button & links */
 button {
-  max-width: 70%;
+  max-width: 400px;
   border: #777777 solid 1px;
   font-size: 1.25rem;
   padding: 1rem;
@@ -83,12 +79,10 @@ video{border-radius: 4px;}
 
 /* header section */
 header {
-  width: 100%;
-  margin-right: 0 auto;
+  max-width: 100%;
   display:flex;
   justify-content: space-between;
   height: 4rem;
-  background-color: pink;
 }
 .logo, .nav {
   display: flex;
@@ -112,27 +106,26 @@ header {
   justify-content: center;
   padding: 3rem 0rem;
 }
-.gray-one, .gray-two {
+.gray {
   background-color: #d8d8d8;
 }
-.white-one, .white-two {
+.white {
   background-color: #ffffff;
 }
-.gray-two, .white-two {
-  flex-direction: column;
-  height: auto;
-  padding: 0;
-}
-.gray-two {
-  padding-bottom: 1rem;
-}
 
+.two {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 /*1st gray/banner section */
 .content {
   max-width: 40%;
+  height: auto;
   margin-right: 1.5rem;
 }
+
 .content.banner{
   border-left: none;
   display: flex;
@@ -146,33 +139,33 @@ header {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  background-color: yellow;
 }
-.description {
-  max-width: 100%;
 
-}
-.pic-container{
+.image.container{
   max-width: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.pic img {
+.image.container img {
 width: 100%;
 height: auto;
 display: block;
 }
+.description{
+  min-width: 100%;
+  width: 0;
+}
 
 /*1st white/information section  */
 .content{
-  border-left: #f0f0f0 solid 1px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
 .teaser {
+  border-left: #f0f0f0 solid 1px;
   max-width: 100%;
   height: auto;
   display: flex;
@@ -180,9 +173,6 @@ display: block;
 }
 .teaser.orientation, .teaser.fisma {
   padding-top: 2rem;
-}
-.teaser.orientation, .teaser.campus {
-  border-bottom: #f0f0f0 solid 1px;
 }
 .teaser.guest, .teaser.campus, .teaser.now-and-then {
   padding-top: 2rem;
@@ -236,9 +226,7 @@ display: block;
 .adjust {
   display: flex
 }
-.column.two {
-  margin:0rem 1.5rem;
-}
+
 .content.two{
   border-left: none;
   padding-top: 0rem;
