--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,8 +26,8 @@ p {font-family:'Lato', sans-serif;font-size: 1.25rem; padding-bottom: 1rem; font
 .name {color:#b22222 ; font-weight: bolder;}
 .nav a {text-decoration: none; color: #888; padding: 0rem 0.5rem;}
 /* banner section font */
-.learn {font-size: 3rem; font-weight: 700; margin: 1rem; color:#555;}
-.what{font-weight: 400; font-size: 1.425rem; margin: 1rem; color:#888; line-height: 1.2;}
+.learn {font-size: 3rem; font-weight: 700; color:#555;}
+.what{font-size: 1.425rem; font-weight: 400; color:#888; line-height: 1.2;}
 /* info section */
 .info h3 {padding-top: 0;}
 /* 2nd gray/gallery section */
@@ -52,7 +52,6 @@ button {
   font-weight: 300;
   border-radius: 0.25rem;
   cursor: pointer;
-  margin: 1rem;
 }
 button a {text-decoration: none; color: white;transition: all 250ms linear 0ms;}
 button:hover a{text-decoration: none; color:#b2b2b2}
@@ -89,7 +88,7 @@ header {
   align-items: center;
 }
 .logo {
-  margin-left: 3rem;
+  margin-left: 2.75rem;
 }
 .logo img {
   padding: 1.25rem 0.625rem 1rem 0rem;
@@ -104,41 +103,48 @@ header {
   height: auto;
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 3rem 0rem;
 }
+
 .gray {
   background-color: #d8d8d8;
 }
 .white {
   background-color: #ffffff;
 }
-
 .two {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+.adjust {
+  display: flex;
 }
 
 /*1st gray/banner section */
-.content {
-  width: 40%;
-  height: auto;
-  margin-right: 1.5rem;
-}
-
-.content.banner{
-  border-left: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
 .column {
-  width: 60%;
+  max-width: 60%;
   margin:0rem 3rem 0 3rem;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+}
+
+.content {
+  width: 40%;
+  height: auto;
+  margin-right: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  border-left: #f0f0f0 solid 1px;
+}
+
+.banner{
+  border-left: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .image.container{
@@ -158,14 +164,7 @@ display: block;
 }
 
 /*1st white/information section  */
-.content{
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
 .teaser {
-  border-left: #f0f0f0 solid 1px;
   max-width: 100%;
   height: auto;
   display: flex;
@@ -200,13 +199,12 @@ display: block;
 /* 2nd gary/picture gallery section  */
 .pictures {
   max-width: 100%;
-  margin: 0rem 4.54rem;
+  margin: 0rem 3rem;
   display: flex;
   justify-content: center;
 }
 .picture {
-  max-width: 31%;
-  overflow: hidden;
+  flex-grow: 1;
   margin-bottom: 2rem;
   background-color: #fff;
   padding-bottom: 1.75rem;
@@ -222,18 +220,6 @@ display: block;
   margin-right: 2rem;
 }
 
-/*2nd white/information section  */
-.adjust {
-  display: flex
-}
-
-.content.two{
-  border-left: none;
-  padding-top: 0rem;
-}
-.white-two {
-  padding-bottom: 3rem;
-}
 /* footer section */
 
 footer{
