--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -119,6 +119,9 @@ header {
   flex-direction: column;
   padding-top: 2rem;
 }
+.gray.two {
+  padding-bottom: 1rem;
+}
 .container {
   display: flex;
 }
@@ -150,15 +153,15 @@ header {
 }
 
 .image, video{
-  max-width: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .image img, video {
-width: 100%;
-height: auto;
-display: block;
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 .description{
   min-width: 100%;
@@ -202,13 +205,13 @@ display: block;
 
 /* 2nd gary/picture gallery section  */
 .pictures {
-  max-width: 100%;
+  width: calc(100% -6rem);
   margin: 0rem 3rem;
   display: flex;
   justify-content: center;
 }
 .picture {
-  flex-grow: 1;
+  width: 100%;
   margin-bottom: 2rem;
   background-color: #fff;
   padding-bottom: 1.75rem;
