--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,13 @@ body, html {
   color: #777777;
 }
 
-/* fonts, Buttons, Videos & Links etc. */
+#main-container{
+  display: flex;
+  flex-flow: column wrap;
+  width: 100%;
+}
+
+/* fonts */
 @font-face {
   font-family: 'Open Sans', sans-serif;
   src: url(fonts/OpenSans-Regular.tff) format('truetype');
@@ -17,31 +23,103 @@ body, html {
   font-family:'Italianno', 'cursive', serif;
   src: url(Italianno-Regular.tff) format('truetype');
 }
-h1 {padding: 2rem 0rem; font-size: 2.5rem; font-weight: 600; font-family: 'Italianno', 'cursive', serif; font-style: italic; color: #555;}
-h3 {padding: 1rem 0rem; font-size: 1.5rem; font-weight:600; color: #b22222;}
-p {padding-bottom: 1rem; font-size: 1.25rem;  font-weight: 100; line-height: 1.4; font-family:'Lato', sans-serif;}
-/* header & nav section */
+
+/* h1/h2 most important italic/serif, h3 red
+ eye catcher important events etc.  */
+h1, h2 {padding: 2rem 0rem; font-size: 2.5rem; font-weight: 600; font-family: 'Italianno', 'cursive', serif; font-style: italic; color: #555;}
+h2 {text-align: center; padding:1rem 0rem 0rem 0rem;}
+h3 {padding: 0rem 0rem 2rem 0rem; font-size: 1.5rem; font-weight:600; color: #b22222;}
+h4 {padding: 1rem 0rem 0.75rem 0rem; font-size: 1.25rem; font-weight: 400; color:#777; line-height: 1.3; font-family:'Lato', sans-serif;}
+p {padding-bottom: 1rem; font-size: 1.25rem;  font-weight: 100; color: #888; line-height: 1.4; font-family:'Lato', sans-serif;}
+/*1st gray/banner section */
+.learn-something h1{font-size: 3rem; font-weight: 700; color:#555;}
+.learn-something h3 {font-size: 1.425rem; font-weight: 400; color:#888; line-height: 1.3;}
+/*1st white section*/
+.info h3 {padding: 0;}
+.info span a {font-size: 0.875rem; color:#999;}
+.description span {padding-top: 0.75rem;font-size: .875rem; font-weight: 100; display: block; font-family: 'Italianno', cursive;  color:#999}
+/* 2nd gray/gallery section */
+.courses-info h3 {padding: 1rem 0rem 0.75rem 1.5rem;}
+.courses-info span {padding: 0.5rem 0rem 0.75rem 1.5rem; font-size: 1.325rem; font-family: 'Lato', sans-serif; display: block; color:#777}
+.courses-info p {padding: 0rem 0rem 0rem 1.5rem; font-size: .875rem; font-weight: 200; color: #999;  line-height: 1.45; letter-spacing: 0.25px}
+/* header & nav, footer section */
 .logo {font-size: 1.425rem; color:#999;}
 .name {color:#b22222 ; font-weight: bolder;}
 .nav a {padding:0rem 0.5rem; text-decoration: none; color: #888;}
-/* banner section font */
-.banner h1{font-size: 3rem; font-weight: 700; color:#555;}
-.banner h3{ padding: 0rem 0rem 2.5rem 0rem; font-size: 1.425rem; font-weight: 400; color:#888; line-height: 1.2;}
-/* info section */
-.info h3 {padding: 0;}
-.info p {padding: 1rem 0rem .75rem 0rem; ; font-weight: 400;line-height: 1.4; color:#777; font-family:'Lato', sans-serif;}
-.info span a {font-size: 0.875rem; color:#999;}
-/* 2nd gray/gallery section */
-.courses-info h3 {padding: 1rem 0rem 0.75rem 1.5rem; font-size: 1.5rem; font-weight: 600;}
-.courses-info span {padding: 0.5rem 0rem 0.75rem 1.5rem; font-size: 1.325rem; font-family: 'Lato', sans-serif; display: block; color:#777}
-.courses-info p {padding: 0rem 0rem 0rem 1.5rem; font-size: .875rem; font-weight: 200; color: #999;  line-height: 1.45; letter-spacing: 0.25px}
-/* white sections  */
-.description p {color: #888}
-.description span {display: block; font-family: 'Italianno', cursive; font-size: .875rem; font-weight: 100; margin-top: 0.75rem; color:#999}
-/* bottom & footer section font */
-h1.headline {padding: 0rem 0rem 2rem 0rem; font-family: 'Italianno', 'cursive', serif; text-align: center; font-style: italic;}
 footer {font-size: 0.75rem;}
-/* banner section button & links */
+
+/* header section */
+header {
+  max-width: 100%;
+  display:flex;
+  justify-content: space-between;
+  height: 4rem;
+}
+.logo, header {
+  display: flex; align-items: center;
+}
+/* align logo and nav, logo has less margin on purpose*/
+.logo {margin-left: 2.75rem;}
+.nav{ margin-right: 3rem;}
+.logo img {padding: 1.25rem 0.625rem 1rem 0rem;}
+
+.info a:hover, .nav a:hover {
+  color: #454545;
+  border-bottom: #b22222 solid 2px;
+  transition: color 250ms linear 0ms;
+  transition: border 100ms linear 0ms;
+}
+
+/* basic code for the two gray/two white sections*/
+.section {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.gray {background-color: #d8d8d8;}
+.white {background-color: #ffffff;}
+.second {padding: 2rem 0rem 2rem 0rem; display: flex;flex-direction: column;}
+
+.asset {
+  width: 60%;
+  margin: 3rem 1.5rem 3rem 3rem;
+  display: flex;
+  flex-direction: column;}
+
+}
+
+.content {width: 40%;
+  margin: 3rem 3rem 3rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  border-left: #f0f0f0 solid 1px;
+}
+
+.container {
+  display: flex;
+}
+/* image 1st gray/white 1st and 2nd sections/videp 2nd white section*/
+.image, video{width: 100%; height: auto; overflow:hidden;}
+.image img, video {max-width: 100%; height: auto; display: block;}
+.description{min-width: 100%; width: 0;}
+.pic{width: 35%; height: auto; overflow: hidden;}
+.pic img {max-width: 100%; height: auto; display: block;}
+img {border-radius: 4px;}
+/* 2nd white section video */
+video{border-radius: 4px;}
+
+/*1st gray (banner) section */
+.learn-something{
+  border-left: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+/* banner section button */
 button {
   max-width: 400px;
   border: #777777 solid 1px;
@@ -58,142 +136,7 @@ button a {text-decoration: none; color: white;transition: all 250ms linear 0ms;}
 button:hover a{text-decoration: none; color:#b2b2b2}
 button:active a{color:white;}
 
-.info a:hover, .nav a:hover {
-  color: #454545;
-  border-bottom: #b22222 solid 2px;
-  transition: color 250ms linear 0ms;
-  transition: border 100ms linear 0ms;
-}
-
-.teaser.orientation:hover,.teaser.campus:hover, .teaser.guest:hover, .teaser.fisma:hover, .teaser.now-and-then:hover  {
-  background-color: #d8d8d8;
-  transition: background-color 450ms ease-in-out 0ms;
-}
-img {border-radius: 4px;}
-.picture img {border-radius: 4px 4px 0px 0px;}
-/*1st white section links */
-.info a {color:#999999; text-decoration: none;}
-
-/* 2nd white section video */
-video{border-radius: 4px;}
-
-/* header section */
-header {
-  max-width: 100%;
-  display:flex;
-  justify-content: space-between;
-  height: 4rem;
-}
-.logo, .nav {
-  display: flex;
-  align-items: center;
-}
-.logo {
-  margin-left: 2.75rem;
-}
-.logo img {
-  padding: 1.25rem 0.625rem 1rem 0rem;
-}
-.nav{
-  margin-right: 3rem;
-}
-
-/* basic code for the two gray/two white sections*/
-.section {
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 3rem 0rem;
-}
-
-.gray {
-  background-color: #d8d8d8;
-}
-.white {
-  background-color: #ffffff;
-}
-.two {
-  display: flex;
-  flex-direction: column;
-  padding-top: 2rem;
-}
-.gray.two {
-  padding-bottom: 1rem;
-}
-.container {
-  display: flex;
-}
-
-/*1st gray/banner section */
-.asset {
-  width: 60%;
-  margin:0rem 3rem 0 3rem;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.content {
-  width: 40%;
-  height: auto;
-  margin-right: 3rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  border-left: #f0f0f0 solid 1px;
-}
-
-.banner{
-  border-left: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.image, video{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.image img, video {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-.description{
-  min-width: 100%;
-  width: 0;
-}
-
 /*1st white/information section  */
-.teaser {
-  width: 100%;
-  height: auto;
-  display: flex;
-  padding: 0rem 0rem 2rem 2rem;
-}
-.teaser.orientation, .teaser.fisma {
-  padding-top: 2rem;
-
-}
-.teaser.guest, .teaser.campus, .teaser.now-and-then {
-  padding-top: 2rem;
-}
-.teaser.guest, .teaser.fisma {
-}
-
-.pic-info{
-  width: 35%;
-  overflow: hidden;
-}
-.content img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
 .info {
   width: 65%;
   height: auto;
@@ -202,8 +145,17 @@ header {
   justify-content: flex-start;
   padding-left: 1rem;
 }
+.dates {
+  width: 100%;
+  height: auto;
+  display: flex;
+  padding: 2rem 0rem 2rem 2rem;
+}
+.dates:hover{background-color: #d8d8d8;transition: background-color 450ms ease-in-out 0ms;}
+.info a {color:#999999; text-decoration: none;}
 
-/* 2nd gary/picture gallery section  */
+/* 2nd gray/picture gallery section  */
+
 .pictures {
   width: calc(100% -6rem);
   margin: 0rem 3rem;
@@ -217,15 +169,9 @@ header {
   padding-bottom: 1.75rem;
   border-radius: 4px;
 }
-.picture img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-.middle {
-  margin-left:2rem;
-  margin-right: 2rem;
-}
+.picture img {max-width: 100%; height: auto; display: block;border-radius: 4px 4px 0px 0px;}
+/* two pics in the center*/
+.center {margin-left:2rem; margin-right: 2rem;}
 
 /* footer section */
 
@@ -246,3 +192,4 @@ footer{
   margin: 0;
   padding: 0;
   padding: 0rem 0.25rem;
+}
