--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -75,8 +75,6 @@ header {
   width: 100%;
   height: auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .gray {background-color: #d8d8d8;}
 .white {background-color: #ffffff;}
@@ -86,7 +84,7 @@ header {
   width: 60%;
   margin: 3rem 1.5rem 3rem 3rem;
   display: flex;
-  flex-direction: column;}
+  flex-direction: column;
 
 }
 
@@ -96,11 +94,10 @@ header {
   flex-direction: column;
   justify-content: flex-start;
   border-left: #f0f0f0 solid 1px;
-}
 
-.container {
-  display: flex;
 }
+.container {display: flex;}
+
 /* image 1st gray/white 1st and 2nd sections/videp 2nd white section*/
 .image, video{width: 100%; height: auto; overflow:hidden;}
 .image img, video {max-width: 100%; height: auto; display: block;}
@@ -156,18 +153,26 @@ button:active a{color:white;}
 
 /* 2nd gray/picture gallery section  */
 
-.pictures {
-  width: calc(100% -6rem);
-  margin: 0rem 3rem;
+.pictures{
   display: flex;
+  flex-flow: row wrap;
   justify-content: center;
+  margin: 3rem 4.5rem 0rem 4.5rem;
 }
+
+.picture-container {
+  width: 30%;
+  flex-grow: 1;
+  background-color: #fff;
+  margin-bottom: 2rem;
+  padding-bottom: 1rem;
+  border-radius: 4px;
+}
+
 .picture {
   width: 100%;
-  margin-bottom: 2rem;
-  background-color: #fff;
-  padding-bottom: 1.75rem;
-  border-radius: 4px;
+  height: auto;
+  overflow: hidden;
 }
 .picture img {max-width: 100%; height: auto; display: block;border-radius: 4px 4px 0px 0px;}
 /* two pics in the center*/
