--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,8 +29,8 @@ body, html {
 h1, h2 {padding: 2rem 0rem; font-size: 2.5rem; font-weight: 600; font-family: 'Italianno', 'cursive', serif; font-style: italic; color: #555;}
 h2 {text-align: center; padding:1rem 0rem 0rem 0rem;}
 h3 {padding: 0rem 0rem 2rem 0rem; font-size: 1.5rem; font-weight:600; color: #b22222;}
-h4 {padding: 1rem 0rem 0.75rem 0rem; font-size: 1.25rem; font-weight: 400; color:#777; line-height: 1.3; font-family:'Lato', sans-serif;}
-p {padding-bottom: 1rem; font-size: 1.25rem;  font-weight: 100; color: #888; line-height: 1.4; font-family:'Lato', sans-serif;}
+h4 {padding: 1rem 0rem 0.75rem 0rem; font-size: 1rem; font-weight: 400; color:#888; line-height: 1.5; font-family:'Lato', sans-serif;}
+p {padding-bottom: 1rem; font-size: 1.25rem;  font-weight: 100; color: #888; line-height: 1.5; font-family:'Lato', sans-serif;}
 /*1st gray/banner section */
 .learn-something h1{font-size: 3rem; font-weight: 700; color:#555;}
 .learn-something h3 {font-size: 1.425rem; font-weight: 400; color:#888; line-height: 1.3;}
@@ -58,10 +58,12 @@ header {
 .logo, header {
   display: flex; align-items: center;
 }
-/* align logo and nav, logo has less margin on purpose*/
+/* align logo and nav, logo has less margin on purpose
+doubled the margin compared to the wireframe on puropose*/
 .logo {margin-left: 2.75rem;}
 .nav{ margin-right: 3rem;}
 .logo img {padding: 1.25rem 0.625rem 1rem 0rem;}
+.icons {display:none;}
 
 .info a:hover, .nav a:hover {
   color: #454545;
@@ -82,18 +84,20 @@ header {
 
 .asset {
   width: 60%;
-  margin: 3rem 1.5rem 3rem 3rem;
+  margin: 3rem 0rem 3rem 3rem;
   display: flex;
   flex-direction: column;
-
+  background-color: blue;
 }
 
-.content {width: 40%;
-  margin: 3rem 3rem 3rem 1.5rem;
+.content {
+  width: 40%;
+  margin: 3rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   border-left: #f0f0f0 solid 1px;
+  background-color: yellow;
 
 }
 .container {display: flex;}
@@ -105,6 +109,7 @@ header {
 .pic{width: 35%; height: auto; overflow: hidden;}
 .pic img {max-width: 100%; height: auto; display: block;}
 img {border-radius: 4px;}
+.pic .mobile {display: none;}
 /* 2nd white section video */
 video{border-radius: 4px;}
 
@@ -123,7 +128,7 @@ button {
   font-size: 1.25rem;
   padding: 1rem;
   display: inline;
-  background-color: #4a4a4a;
+  background-color: #4a4a4a; /* #9b9b9b wireframe*/
   text-align: center;
   font-weight: 300;
   border-radius: 0.25rem;
@@ -153,11 +158,14 @@ button:active a{color:white;}
 
 /* 2nd gray/picture gallery section  */
 
-.pictures{
+.courses{
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   margin: 3rem 4.5rem 0rem 4.5rem;
+}
+.courses-mobile {
+  display: none;
 }
 
 .picture-container {
@@ -168,7 +176,6 @@ button:active a{color:white;}
   padding-bottom: 1rem;
   border-radius: 4px;
 }
-
 .picture {
   width: 100%;
   height: auto;
@@ -177,6 +184,14 @@ button:active a{color:white;}
 .picture img {max-width: 100%; height: auto; display: block;border-radius: 4px 4px 0px 0px;}
 /* two pics in the center*/
 .center {margin-left:2rem; margin-right: 2rem;}
+
+@media all and (max-width: 470px) {
+
+.pictures {
+  display: none;
+}
+
+}
 
 /* footer section */
 
