--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,30 +23,17 @@ body, html {
   font-family:'Italianno', 'cursive', serif;
   src: url(Italianno-Regular.tff) format('truetype');
 }
-
 /* h1/h2 most important italic/serif, h3 red
  eye catcher important events etc.  */
-h1, h2 {padding: 2rem 0rem; font-size: 2.5rem; font-weight: 600; font-family: 'Italianno', 'cursive', serif; font-style: italic; color: #555;}
-h2 {text-align: center; padding:1rem 0rem 0rem 0rem;}
-h3 {padding: 0rem 0rem 2rem 0rem; font-size: 1.5rem; font-weight:600; color: #b22222;}
-h4 {padding: 1rem 0rem 0.75rem 0rem; font-size: 1rem; font-weight: 400; color:#888; line-height: 1.5; font-family:'Lato', sans-serif;}
-p {padding-bottom: 1rem; font-size: 1.25rem;  font-weight: 100; color: #888; line-height: 1.5; font-family:'Lato', sans-serif;}
-/*1st gray/banner section */
-.learn-something h1{font-size: 3rem; font-weight: 700; color:#555;}
-.learn-something h3 {font-size: 1.425rem; font-weight: 400; color:#888; line-height: 1.3;}
-/*1st white section*/
-.info h3 {padding: 0;}
-.info span a {font-size: 0.875rem; color:#999;}
-.description span {padding-top: 0.75rem;font-size: .875rem; font-weight: 100; display: block; font-family: 'Italianno', cursive;  color:#999}
-/* 2nd gray/gallery section */
-.courses-info h3 {padding: 1rem 0rem 0.75rem 1.5rem;}
-.courses-info span {padding: 0.5rem 0rem 0.75rem 1.5rem; font-size: 1.325rem; font-family: 'Lato', sans-serif; display: block; color:#777}
-.courses-info p {padding: 0rem 0rem 0rem 1.5rem; font-size: .875rem; font-weight: 200; color: #999;  line-height: 1.45; letter-spacing: 0.25px}
-/* header & nav, footer section */
-.logo {font-size: 1.425rem; color:#999;}
-.name {color:#b22222 ; font-weight: bolder;}
-.nav a {padding:0rem 0.5rem; text-decoration: none; color: #888;}
-footer {font-size: 0.75rem;}
+h1, h2
+   {padding: 2rem 0rem 2rem 0rem; font-size: 2.5rem; font-weight: 600; color: #555; font-family: 'Italianno', 'cursive', serif; font-style: italic;}
+h2 {padding: 1rem 0rem 0rem 0rem;                                                   text-align: center;}
+h3 {padding: 0rem 0rem 1.5rem 0rem; font-size: 1.5rem; font-weight:600; color: #b22222;}
+h4 {padding: 1rem 0rem 1rem 0rem; font-size: 1rem; font-weight: 300; color:#777; line-height: 1.5; font-family:'Lato', sans-serif;}
+p  {padding: 0rem 0rem 0rem 1rem; font-size: 1.25rem;font-weight: 100; color: #888; line-height: 1.5; font-family:'Lato', sans-serif;}
+@media all and (max-width: 470px) {
+  h2 {font-size: 2.25rem}
+}
 
 /* header section */
 header {
@@ -55,21 +42,32 @@ header {
   justify-content: space-between;
   height: 4rem;
 }
-.logo, header {
-  display: flex; align-items: center;
-}
-/* align logo and nav, logo has less margin on purpose
-doubled the margin compared to the wireframe on puropose*/
-.logo {margin-left: 2.75rem;}
-.nav{ margin-right: 3rem;}
-.logo img {padding: 1.25rem 0.625rem 1rem 0rem;}
+
+.logo, header {display: flex; align-items: center;}
+/* logo has different padding on purpose to adjust to rest of content*/
+.logo {padding-left: 2.25rem;font-size: 1.425rem;color:#999;}
+.nav  {margin-right: 3rem;}
+.name {color:#b22222 ; font-weight: bolder;}
+.nav a{padding-right: 0.75rem; text-decoration: none; color: #888;}
+.logo img {padding: 1.25rem 0.5rem 1rem 0rem; width: 2.5rem}
 .icons {display:none;}
 
-.info a:hover, .nav a:hover {
-  color: #454545;
-  border-bottom: #b22222 solid 2px;
-  transition: color 250ms linear 0ms;
-  transition: border 100ms linear 0ms;
+@media all and (max-width: 470px){
+
+.nav.header,.logo {display: none;}
+.icons img {max-width: 100%; height: auto; padding: 1rem 1rem}
+.icons img:hover{
+  background-color: #d9d9d9;
+  transition: background-color 450ms ease-in-out 50ms;
+  border-radius: 2px;
+}
+
+.icons {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0rem 2rem;
+  }
 }
 
 /* basic code for the two gray/two white sections*/
@@ -87,46 +85,66 @@ doubled the margin compared to the wireframe on puropose*/
   margin: 3rem 0rem 3rem 3rem;
   display: flex;
   flex-direction: column;
-  background-color: blue;
 }
 
 .content {
   width: 40%;
+  border-left: #f0f0f0 solid 1px;
   margin: 3rem;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  border-left: #f0f0f0 solid 1px;
-  background-color: yellow;
-
+  flex-flow: column;
 }
+
+.border {border:none;}
 .container {display: flex;}
 
-/* image 1st gray/white 1st and 2nd sections/videp 2nd white section*/
-.image, video{width: 100%; height: auto; overflow:hidden;}
-.image img, video {max-width: 100%; height: auto; display: block;}
-.description{min-width: 100%; width: 0;}
-.pic{width: 35%; height: auto; overflow: hidden;}
-.pic img {max-width: 100%; height: auto; display: block;}
-img {border-radius: 4px;}
-.pic .mobile {display: none;}
-/* 2nd white section video */
-video{border-radius: 4px;}
+@media all and (max-width: 470px){
+  .section {
+    flex-flow: column;
+  }
+  .asset {
+    width: 100%;
+    margin: 0;
 
-/*1st gray (banner) section */
-.learn-something{
-  border-left: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    justify-content: center;
+  }
+  .content {
+    width:100%;
+    margin: 0;
+    background-color: #d8d8d8;
+    border: none;
+  }
+  .container {
+    flex-flow: column;
+  }
+
+  .hide {
+    display: none;
+  }
 }
 
+/*1st gray (banner) section */
+.learn-something h1{font-size: 3rem; font-weight: 700; color:#555;}
+.learn-something h3 {font-size: 1.425rem; font-weight: 400; color:#888; line-height: 1.3;}
+
+.learn-something {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+
+/* image 1st gray/white and white 2nd sections/video 2nd white section*/
+.image, video{width: 100%; height: auto; overflow:hidden;}
+.image img, video {max-width: 100%; height: auto; display: block;}
+img, video {border-radius: 4px;}
 /* banner section button */
 button {
   max-width: 400px;
   border: #777777 solid 1px;
   font-size: 1.25rem;
   padding: 1rem;
+  margin-bottom: 2rem;
   display: inline;
   background-color: #4a4a4a; /* #9b9b9b wireframe*/
   text-align: center;
@@ -138,7 +156,29 @@ button a {text-decoration: none; color: white;transition: all 250ms linear 0ms;}
 button:hover a{text-decoration: none; color:#b2b2b2}
 button:active a{color:white;}
 
+@media all and (max-width: 470px){
+  .learn-something {padding: 0rem 2rem;}
+  .learn-something h1{font-size: 2.25rem; font-weight: 700; color:#555;}
+  .learn-something h3 {font-size: 1.25rem; font-weight: 400; color:#888; line-height: 1.3;}
+}
+
 /*1st white/information section  */
+.info h3 {padding: 0;}
+.info span a {font-size: 0.875rem; color:#4185de;}
+.description span {padding-top: 0.75rem;font-size: .875rem; font-weight: 100; display: block; font-family: 'Italianno', cursive;  color:#999}
+
+.events, .thesis {
+  width: calc(100%-2rem);
+  height: auto;
+  display: flex;
+  padding: 2rem 0rem 2rem 2rem;
+}
+
+.events:hover, .thesis:hover{
+  background-color: #e5e5e5;
+  transition: background-color 450ms ease-in-out 0ms;
+}
+
 .info {
   width: 65%;
   height: auto;
@@ -147,15 +187,51 @@ button:active a{color:white;}
   justify-content: flex-start;
   padding-left: 1rem;
 }
-.dates {
-  width: 100%;
-  height: auto;
-  display: flex;
-  padding: 2rem 0rem 2rem 2rem;
-}
-.dates:hover{background-color: #d8d8d8;transition: background-color 450ms ease-in-out 0ms;}
-.info a {color:#999999; text-decoration: none;}
 
+.pic-container {
+  display: flex;
+  height: auto;
+  margin: 0;
+  padding: 0;
+}
+.pic {
+  width: 35%; height: auto; overflow: hidden;
+}
+
+.info a:hover, .nav a:hover {
+  color: #454545;
+  border-bottom: #b22222 solid 2px;
+  transition: color 250ms linear 0ms;
+  transition: border 100ms linear 0ms;
+}
+.info a {color:#999999; text-decoration: none;}
+.pic{}
+.pic img {max-width: 100%; height: auto; display: block;}
+.pic img.mobile {display: none;}
+
+@media all and (max-width: 470px) {
+  .info h3 {padding: 2rem 0rem 0rem 0rem; font-size: 1.75rem; color: #666;}
+  .info h4 {font-size: 1.375rem;}
+  .info span a {font-size: 1rem;}
+  .info {width:100%;}
+/* display none messed up the pictures */
+  .events:hover{
+      background-color: white;
+  }
+  .events {
+    flex-flow: column;
+    padding:  1rem 1rem 2rem 1rem;
+    background-color: white;
+  }
+
+  .pic {width: 100% }
+  .pic img.desktop {
+    display: none;
+  }
+  .pic img.mobile {
+    display: block;
+  }
+}
 /* 2nd gray/picture gallery section  */
 
 .courses{
@@ -181,35 +257,58 @@ button:active a{color:white;}
   height: auto;
   overflow: hidden;
 }
+.course-info h3 {padding: 1rem 0rem 0.75rem 1.5rem;}
+.course-info span {padding: 0.5rem 0rem 0.75rem 1.5rem; font-size: 1.325rem; font-family: 'Lato', sans-serif; display: block; color:#777}
+.course-info p {padding: 0rem 0rem 0rem 1.5rem; font-size: .875rem; font-weight: 200; color: #999; line-height: 1.45; letter-spacing: 0.25px}
 .picture img {max-width: 100%; height: auto; display: block;border-radius: 4px 4px 0px 0px;}
 /* two pics in the center*/
 .center {margin-left:2rem; margin-right: 2rem;}
 
 @media all and (max-width: 470px) {
+  .headline {padding-top: 0rem;}
+  .headline2 {padding-bottom: 1rem;}
+.gray {background-color: white}
+.courses {display: none;}
 
-.pictures {
-  display: none;
+.courses-mobile {
+  margin: 0rem 1rem;
+  display: flex;
+  flex-flow: column;
 }
-
+.course-info {
+  margin: 1rem 0rem 0rem 0rem;
+  background-color: #d8d8d8;
+  border-radius: 2px;
 }
-
+.course-info h3 {
+  padding: 1.5rem 0rem 1.5rem 1rem;
+  font-size: 1.25rem;
+  color: #666;
+}
+  img, video {border-radius: 0px;}
+}
 /* footer section */
-
 footer{
-  height: 5rem;
+  font-size: 0.75rem;
+  width:100%;
+  height: 4rem;
   border-top:#f0f0f0 solid 1px;
   padding-top: 2rem;
   display: flex;
   justify-content: space-between;
 }
+
 .copyright {
-  margin-left: 3rem;
+  padding-left: 3rem;
 }
-.nav.footer {
-  align-items: flex-start;
-}
-.nav.footer a {
-  margin: 0;
-  padding: 0;
-  padding: 0rem 0.25rem;
+
+@media all and (max-width: 470px) {
+  footer{
+    padding: 0.5rem 0rem 1rem 0rem;
+    border: none;
+    justify-content: center;
+    height: auto;
+  }
+  .nav.footer {display: none;}
+  .copyright {padding: 0rem;}
 }
