--- a/resources/css/min-width601px_max-width768px.css
+++ b/resources/css/min-width601px_max-width768px.css
@@ -58,7 +58,7 @@ h2 {font-size: 2.25rem}
   font-size: 1.25rem;
   padding-bottom: 1.5rem;
 }
-.btn {width: 60%;  }
+.btn {width: 50%;  }
 
 /*1st white/information section*/
 .pic-container--hide, .pic-desktop
@@ -69,9 +69,7 @@ h2 {font-size: 2.25rem}
   width: 50%;
 }
 
-.text-box-s {
-  width: 50%;
-}
+.text-box-s {width: 50%;}
 
 .text-box-s {
   padding-left: 2rem;
